--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nanoid": "^5.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-router": "^6.26.2",
     "react-router-dom": "^6.26.2",
     "socket.io-client": "^4.8.0"
